syntax = "proto3";

option java_package = "tornaco.apps.shortx.core.proto.da";
option java_outer_classname = "OuterDirectActions";
option java_multiple_files = true;

import "google/protobuf/any.proto";
import "shortx/Common.proto";

message DirectActionSet {
  string id = 1;
  string title = 2;
  string description = 3;
  string icon = 4;
  int64 lastUpdateTime = 5;
  int64 createTime = 6;

  DirectActionList daList = 7;
}

message DirectActionSetList {
  repeated DirectActionSet directActionSet = 1;
}

message DirectAction {
  repeated google.protobuf.Any actions = 1;

  string id = 2;
  int64 lastUpdateTime = 3;
  int64 createTime = 4;

  Author author = 5;

  string title = 6;
  string description = 7;

  int64 versionCode = 8;
  ConflictStrategy conflictPolicy = 9;

  // Put some extras for ext
  // Currently extras:
  // 1. VT-PKG
  repeated StringPair extras = 10;

  string directActionSetId = 11;
}

message DirectActionList {
  repeated DirectAction directActions = 1;
}